<resources>
    <string name="app_name">Bulletin Board</string>
    <string name="ad_cat1">Ad</string>
    <string name="ad_my_ads">My Ads</string>
    <string name="ad_car">Cars</string>
    <string name="ad_computer">Computers</string>
    <string name="ad_smartphone">Smartphones</string>
    <string name="ad_ha">Household Appliances</string>
    <string name="ad_cat2">Account</string>
    <string name="ac_sign_up">Sign Up</string>
    <string name="ac_sign_in">Sign In</string>
    <string name="ac_sign_out">Sign Out</string>
    <string name="example_mail">example@example.com</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- App name-->
    <!-- Sign Dialog -->
    <string name="email_hint">Email</string>
    <string name="forget_password">Forget password</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_error">Failed to Sign Up</string>
    <string name="send_verification_email_error">Failed to send email</string>
    <string name="send_verification_email_done">Email is send to your email</string>
    <string name="not_reg">Log In or Sign Up</string>
    <string name="sign_in_error">Can\'t Sign In</string>
    <string name="reset_email_was_sent">Reset email was sent!</string>
    <string name="reset_email_message">Please enter your email address</string>
    <string name="link_done">Email is success linked to Google account</string>
    <string name="enter_to_gmail">You already have a account with this Email</string>
    <string name="new_ad">New ad</string>
    <string name="no_result">No result</string>
    <string name="select_country">Select country</string>
    <string name="select_city">Select city</string>



</resources>